--- a/src/App.css
+++ b/src/App.css
@@ -42,7 +42,13 @@
   padding: 12px;
   margin: 0 12px;
 }
-.BtnShuffle {
+
+.BtnPlayAgain {
+  padding: 12px;
+  margin: 0 0 25px;
+}
+
+.BtnSubmitShuffle {
   padding: 12px;
   margin: 0 12px;
   border: none;
@@ -50,7 +56,7 @@
   border-radius: 4px;
 
 }
-.BtnShuffle:hover {
+.BtnSubmitShuffle:hover {
   background-color: green;
 
 }
