--- a/src/AppHangman.css
+++ b/src/AppHangman.css
@@ -1,3 +1,7 @@
+.h3Info {
+  margin: 5px 0;
+}
+
 .hangman {
     display: flex;
     flex-direction: column;
@@ -25,7 +29,7 @@
     background-Color: #c9c9c9;
     display: flex;
     flex-Flow: wrap;
-    margin-top:  3rem;
+    margin-top:  1rem;
     justify-content: center;
     padding: 5px;
   }
@@ -45,9 +49,12 @@
     width: 500px;
   }
   
-  .section {
+  .sectionHangman {
     width: 500px;
     align-items: center;
+    justify-content: center;
+    display: flex;
+    flex-direction: column;
   }
   
   .guessesLetters {
